replace bad sun.misc Base64 class with correct java.util variant