@@ -1,10 +1,9 @@
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 import ufw.Hex;
 import ufw.Log;
 import ufw.Validate;
 
 import java.util.Arrays;
+import java.util.Base64;
 import java.util.Random;
 
 public class Base64Test {
@@ -15,9 +14,9 @@ public class Base64Test {
         for (int size = 0; size < 20; size++) {
             byte[] bytes = new byte[size];
             rand.nextBytes(bytes);
-            String encoded = new BASE64Encoder().encode(bytes);
+            String encoded = Base64.getEncoder().encodeToString(bytes);
             Log.info("enc: " + encoded);
-            byte[] decoded = new BASE64Decoder().decodeBuffer(encoded);
+            byte[] decoded = Base64.getDecoder().decode(encoded);
             Log.info("dec: " + Hex.toString(decoded));
             Validate.isTrue(Arrays.equals(bytes, decoded));
         }
